--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exceljs": "^4.4.0",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.1",
     "read-excel-file": "^6.0.1"
   },
