--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.11.0",
     "read-excel-file": "^6.0.1"
   },
   "devDependencies": {
