--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^7.29.12",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
