fix(pwa): Register Service Worker and update manifest for full PWA support

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,12 +9,14 @@
         {
             "src": "/logodroifil.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
             "src": "/logodroifil.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
