--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@mui/x-data-grid": "^7.29.12",
     "@supabase/supabase-js": "^2.89.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.11.0",
-    "read-excel-file": "^6.0.1"
+    "read-excel-file": "^6.0.1",
+    "xmlrpc": "^1.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
